objects/Batch_Automation_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Default_Values__c</fullName>
        <inlineHelpText>Enter the values ex: &lt;Field_API_Name__c&gt;:&lt;Value&gt; and separate with a ','</inlineHelpText>
        <label>Additional Default Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_SOQL_Criteria__c</fullName>
        <label>Additional SOQL Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Values__c</fullName>
        <inlineHelpText>Enter the values ex: &lt;Field_API_Name__c&gt;:&lt;Value&gt; and separate with a ','</inlineHelpText>
        <label>Default Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SOQL_Criteria__c</fullName>
        <label>SOQL Criteria</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Batch Automation Settings</label>
</CustomObject>